--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -7,4 +7,4 @@ html
         link(rel="stylesheet", href="/css/site.css")
     body(ng-app='app')
         block main-content
-        include scripts
+        include ../includes/scripts
